COOPERATIVISM - Criação do modulo de assembleia
